Fix overflow on home page

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -763,6 +763,10 @@ input {
 }
 
 @media (max-width: 767px) {
+  h1 {
+    font-size: 2.7em;
+  }
+
   h2 {
     font-size: 2em;
   }
